--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -17,7 +17,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
-      uses: actions/setup-node@v4
+    - name: tests with Node.js ${{ matrix.node-version }}
+    - uses: actions/setup-node@v4
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'yarn'
