Minor fix to github actions

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -18,10 +18,8 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - name: tests with Node.js ${{ matrix.node-version }}
-    - uses: actions/setup-node@v4
+      uses: actions/setup-node@v4
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'yarn'
-    run: |
-      yarn install --silent --non-interactive
-      yarn test
+      run: yarn test
