--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "stimulus-file-input-validator",
-  "version": "1.0.3",
+  "version": "1.1.0",
   "description": "Client side file input validations for files size and extension",
   "keywords": [
     "stimulus",
@@ -10,34 +10,43 @@
   ],
   "type": "module",
   "main": "dist/file-input-validator.js",
+  "types": "dist/types/index.d.ts",
   "exports": {
     ".": {
-      "import": "dist/file-input-validator.js",
-      "require": "dist/file-input-validator.umd.cjs"
+      "import": "./dist/file-input-validator.js",
+      "require": "./dist/file-input-validator.umd.cjs"
     }
   },
+  "files": [
+    "dist"
+  ],
   "repository": "git@github.com:martinnicolas/stimulus-file-input-validator.git",
   "bugs": {
     "url": "https://github.com/martinnicolas/stimulus-file-input-validator/issues"
   },
   "author": "martinnicolas <ttincho77@gmail.com>",
   "license": "MIT",
+  "homepage": "https://github.com/martinnicolas/stimulus-file-input-validator",
   "devDependencies": {
     "@babel/preset-typescript": "^7.26.0",
+    "@eslint/js": "^9.18.0",
     "@hotwired/stimulus": "^3.2.2",
+    "globals": "^15.14.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "ts-jest": "^29.2.5",
     "typescript": "^5.6.3",
+    "typescript-eslint": "^8.21.0",
     "vite": "^5.4.10"
   },
   "scripts": {
     "test": "jest",
     "coverage": "jest --coverage",
+    "types": "tsc --noEmit false --declaration true --emitDeclarationOnly true --outDir dist/types",
     "dev": "vite",
     "prod": "vite build --mode netlify",
-    "build": "vite build",
+    "build": "vite build && yarn types",
     "preview": "vite preview",
-    "lint": "eslint"
+    "lint": "yarn eslint"
   }
 }
