--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@babel/preset-typescript": "^7.26.0",
     "@eslint/js": "^9.18.0",
     "@hotwired/stimulus": "^3.2.2",
+    "eslint": "^9.19.0",
     "globals": "^15.14.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
